refactor: 重构与优化 ComplexJpaRepository

--- a/example/src/test/resources/application.yml
+++ b/example/src/test/resources/application.yml
@@ -65,8 +65,9 @@ graphql:
       address: http://api.asany.cn/graphql
 
 logging:
-  path: ./log
   config: classpath:logback.xml
+  file:
+    path: ./log
 
 
 
