--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -42,6 +42,11 @@ spring:
     generate-ddl: false
     open-in-view: false
   quartz:
+    job-store-type: jdbc
+    wait-for-jobs-to-complete-on-shutdown: true
+    overwrite-existing-jobs: true
+    jdbc:
+      initialize-schema: embedded
     properties:
       org:
         quartz:
@@ -49,6 +54,7 @@ spring:
             instanceName: clusteredScheduler
             instanceId: AUTO
           jobStore:
+            dataSource: qzDS
             class: org.quartz.impl.jdbcjobstore.JobStoreTX
             driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
             tablePrefix: QRTZ_
@@ -60,9 +66,6 @@ spring:
             threadCount: 10
             threadPriority: 5
             threadsInheritContextClassLoaderOfInitializingThread: true
-    job-store-type: jdbc
-    jdbc:
-      initialize-schema: never
 
 management:
   health:
