--- a/example/build.gradle
+++ b/example/build.gradle
@@ -13,7 +13,7 @@ jar {
 
 tasks.publish.enabled = false
 
-tasks.withType(Test) { enabled = false }
+tasks.withType(Test).configureEach { enabled = false }
 
 tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
 
