--- a/gradle.properties
+++ b/gradle.properties
@@ -58,6 +58,10 @@ LIB_MAPSTRUCT_VER = 1.4.2.Final
 LIB_LOMBOK_VER = 1.18.24
 LIB_LOMBOK_MAPSTRUCT_BINDING_VER = 0.2.0
 
+###
+LIB_HUTOOL_VER = 5.8.11
+LIB_SHARDING_SPHERE_VER = 4.1.1
+
 ### graphql
 LIB_GRAPHQL_SCALARS_VER = 18.1
 LIB_GRAPHQL_BOOT_VER = 15.0.0
