--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,20 +10,25 @@ apply plugin: 'jacoco'
 dependencies {
 	api project(":jfantasy-commons")
 	// spring boot
+	// noinspection DependencyNotationArgument
 	api libs['springBoot']
 	// quartz
+	// noinspection DependencyNotationArgument
 	api libs['quartz']
 	// orm
+	// noinspection DependencyNotationArgument
 	api libs['orm']
 	// unirest
+	// noinspection DependencyNotationArgument
 	api libs['unirest']
 	// commons
+	// noinspection DependencyNotationArgument
 	api libs['commons']
 	// ognl and cglib
+	// noinspection DependencyNotationArgument
 	api libs['third-party']
 	api 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 	api "com.jayway.jsonpath:json-path"
-	compileOnly "javax.annotation:javax.annotation-api:1.3.2"
 	compileOnly 'jakarta.servlet:jakarta.servlet-api'
 	compileOnly "org.springframework.boot:spring-boot-starter-data-redis"
 	compileOnly "cn.hutool:hutool-all:${LIB_HUTOOL_VER}"
@@ -37,6 +42,7 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok"
 	testCompileOnly "org.projectlombok:lombok"
 	testAnnotationProcessor "org.projectlombok:lombok"
+	// noinspection DependencyNotationArgument
 	testImplementation libs['test']
 }
 
