--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -4,9 +4,9 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/core?autoReconnect=true&useUni
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.redis.host=localhost
-spring.redis.password=
-spring.redis.port=6379
+spring.data.redis.host=localhost
+spring.data.redis.password=
+spring.data.redis.port=6379
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.cache.use_second_level_cache=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 
 
 spring.jpa.properties.hibernate.ejb.identifier_generator_strategy_provider=org.jfantasy.framework.dao.hibernate.spi.CustomIdentifierGeneratorStrategyProvider
