--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -15,18 +15,18 @@ spring:
       max-lifetime: 1800000
       connection-test-query: SELECT 1
       connection-init-sql: set names utf8mb4
-  redis:
-    jedis:
-      pool:
-        max-active: 8
-        max-wait: 300
-        max-idle: 100
-        min-idle: 100
-    connect-timeout: 1000
+  data:
+    redis:
+      jedis:
+        pool:
+          max-active: 8
+          max-wait: 300
+          max-idle: 100
+          min-idle: 100
+      connect-timeout: 1000
   jpa:
     hibernate:
       ddl-auto: update
-      use-new-id-generator-mappings: true
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
     properties:
@@ -46,7 +46,7 @@ spring:
     wait-for-jobs-to-complete-on-shutdown: true
     overwrite-existing-jobs: true
     jdbc:
-      initialize-schema: embedded
+      initialize-schema: never
     properties:
       org:
         quartz:
@@ -54,8 +54,7 @@ spring:
             instanceName: clusteredScheduler
             instanceId: AUTO
           jobStore:
-            dataSource: qzDS
-            class: org.quartz.impl.jdbcjobstore.JobStoreTX
+            class: org.springframework.scheduling.quartz.LocalDataSourceJobStore
             driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
             tablePrefix: QRTZ_
             isClustered: false
