--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,15 @@ kotlin.version=1.6.21
 PLUGIN_SONARQUBE_VER = 2.7.1
 PLUGIN_JREBEL_VER = 1.1.8
 PLUGIN_SPRING_DEPENDENCY_MANAGEMENT_VER = 1.1.3
+PLUGIN_KT3K_COVERALLS_VER = 2.12.2
+PLUGIN_GIT_HOOK_VER = 1.2.1
+PLUGIN_COMMITLINT_VER = 1.4.3
+PLUGIN_SPOTLESS_VER = 6.21.0
+PLUGIN_ECLIPSE_APT_VER = 3.42.2
 
 ### orm
 LIB_SPRING_MYBATIS_VER = 3.0.2
+LIB_MYSQL_CONNECTOR_VER = 8.0.31
 
 ### https://github.com/ttddyy/datasource-proxy
 LIB_DATASOURCE_PROXY_VER = 1.7
@@ -32,10 +38,15 @@ LIB_APACHE_COMMONS_NET_VER = 3.3
 LIB_COMMONS_BEANUTILS_VER = 1.9.4
 LIB_HANDLEBARS_VER = 4.1.2
 LIB_COMMONS_IO_VER = 2.11.0
-LIB_COMMONS_LOGGING_VER = 1.2
 LIB_APACHE_COMMONS_EMAIL_VER = 1.3.2
 LIB_COMMONS_FILEUPLOAD_VER = 1.2.2
 LIB_APACHE_COMMONS_LANG3_VER = 3.7
+LIB_BITWALKER_USER_AGENT_PARSER_VER = 1.21
+LIB_NIMBUS_JOSE_JWT_VER = 9.10.1
+LIB_ASPECTJ_WEAVER_VER = 1.9.7
+LIB_HIBERNATE_VALIDATOR_VER = 8.0.1.Final
+LIB_JAKARTA_INTERCEPTOR_API_VER = 2.1.0
+
 
 # Elasticsearch
 LIB_ELASTICSEARCH_VER = 8.2.0
@@ -59,7 +70,7 @@ LIB_LOMBOK_VER = 1.18.24
 LIB_LOMBOK_MAPSTRUCT_BINDING_VER = 0.2.0
 
 ###
-LIB_HUTOOL_VER = 5.8.11
+LIB_HUTOOL_VER = 5.8.21
 LIB_SHARDING_SPHERE_VER = 4.1.1
 
 ### graphql
