--- a/search/build.gradle
+++ b/search/build.gradle
@@ -6,7 +6,7 @@ configurations {
 
 apply plugin: 'java-library'
 
-tasks.withType(Test) { enabled = false }
+tasks.withType(Test).configureEach { enabled = false }
 
 dependencies {
 	api project(":jfantasy-commons")
@@ -14,7 +14,6 @@ dependencies {
 		exclude group: "commons-logging", module: "commons-logging"
 	}
 	implementation "jakarta.json:jakarta.json-api:${LIB_JAKARTA_VAR}"
-	compileOnly "javax.annotation:javax.annotation-api:1.3.2"
 	compileOnly 'jakarta.servlet:jakarta.servlet-api'
 	compileOnly "org.springframework.boot:spring-boot-starter-data-jpa"
 	compileOnly "org.springframework:spring-context"
