--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -20,17 +20,19 @@ dependencies {
 	compileOnly libs['orm']
 	compileOnly "org.springframework.boot:spring-boot-starter-data-jpa"
 	compileOnly "org.springframework.boot:spring-boot-starter-data-redis"
-	compileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
-	annotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
-	testCompileOnly "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
-	testAnnotationProcessor "org.projectlombok:lombok:${LIB_LOMBOK_VER}"
+	compileOnly "org.projectlombok:lombok"
+	annotationProcessor "org.projectlombok:lombok"
+	testCompileOnly "org.projectlombok:lombok"
+	testAnnotationProcessor "org.projectlombok:lombok"
 	// noinspection DependencyNotationArgument
 	compileOnly "org.projectlombok:lombok"
 	annotationProcessor "org.projectlombok:lombok"
 	testCompileOnly "org.projectlombok:lombok"
 	testAnnotationProcessor "org.projectlombok:lombok"
+	//noinspection DependencyNotationArgument
 	testImplementation libs['test']
 	testCompileOnly 'jakarta.servlet:jakarta.servlet-api'
+	testCompileOnly 'jakarta.persistence:jakarta.persistence-api'
 }
 
 repositories {
