--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ kotlin.version=1.6.21
 
 ### Plugin
 PLUGIN_SONARQUBE_VER = 2.7.1
-PLUGIN_JREBEL_VER = 1.1.8
+PLUGIN_JREBEL_VER = 1.1.12
 PLUGIN_SPRING_DEPENDENCY_MANAGEMENT_VER = 1.1.3
 PLUGIN_KT3K_COVERALLS_VER = 2.12.2
 PLUGIN_GIT_HOOK_VER = 1.2.1
@@ -33,6 +33,7 @@ LIB_SPRING_BOOT_VER = 3.1.3
 
 ### commons
 LIB_ASM_VER = 9.2
+LIB_GUAVA_VER = 32.1.2-jre
 LIB_APACHE_COMMONS_TEXT_VER = 1.9
 LIB_APACHE_COMMONS_NET_VER = 3.3
 LIB_COMMONS_BEANUTILS_VER = 1.9.4
@@ -76,8 +77,8 @@ LIB_SHARDING_SPHERE_VER = 4.1.1
 ### graphql
 LIB_GRAPHQL_SCALARS_VER = 18.1
 LIB_GRAPHQL_BOOT_VER = 15.0.0
-LIB_GRAPHQL_JAVA_VER = 20.0
-LIB_GRAPHQL_JAVA_TOOLS_VER = 13.0.2
+LIB_GRAPHQL_JAVA_VER = 21.0
+LIB_GRAPHQL_JAVA_TOOLS_VER = 13.0.3
 
 ##
 LIB_WEBMAGIC_VER = 0.8.0
