--- a/core/src/main/resources/error_codes.properties
+++ b/core/src/main/resources/error_codes.properties
@@ -1,4 +1,8 @@
-java.lang.Exception=000000
+java.lang.Exception=400000
 # \u9A8C\u8BC1\u5F02\u5E38\u9ED8\u8BA4\u7801
 org.jfantasy.framework.error.ValidationException=420000
+# \u9A8C\u8BC1\u9519\u8BEF\u7801
+org.springframework.web.bind.MethodArgumentNotValidException=422000
+org.springframework.web.bind.support.WebExchangeBindException=422000
+# \u5176\u4ED6
 org.jfantasy.framework.spring.mvc.error.NotFoundException=420001
