--- a/graphql/build.gradle
+++ b/graphql/build.gradle
@@ -12,12 +12,13 @@ dependencies {
 	api("com.graphql-java-kickstart:graphql-spring-boot-starter:${LIB_GRAPHQL_BOOT_VER}") {
 		exclude group: "com.graphql-java-kickstart", module: "graphql-java-tools"
 		exclude group: "com.graphql-java", module: "graphql-java"
+		exclude group: "org.springframework", module: "spring-webflux"
 	}
 	api "com.graphql-java:graphql-java:$LIB_GRAPHQL_JAVA_VER"
 	api "com.graphql-java-kickstart:graphql-java-tools:$LIB_GRAPHQL_JAVA_TOOLS_VER"
 	api "com.graphql-java:graphql-java-extended-scalars:$LIB_GRAPHQL_SCALARS_VER"
 	api "com.jayway.jsonpath:json-path"
-	api 'org.springframework.boot:spring-boot-starter-websocket'
+	compileOnly 'org.springframework.boot:spring-boot-starter-websocket'
 	compileOnly "org.springframework:spring-orm"
 	compileOnly "org.springframework.data:spring-data-jpa"
 	compileOnly 'org.aspectj:aspectjweaver'
@@ -26,5 +27,6 @@ dependencies {
 	annotationProcessor "org.projectlombok:lombok"
 	testCompileOnly "org.projectlombok:lombok"
 	testAnnotationProcessor "org.projectlombok:lombok"
+	//noinspection DependencyNotationArgument
 	testImplementation libs['test']
 }
