--- a/build.gradle
+++ b/build.gradle
@@ -75,8 +75,8 @@ subprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'signing'
 
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = project.property('SOURCE_COMPATIBILITY')
+    targetCompatibility = project.property('TARGET_COMPATIBILITY')
 
     java {
         toolchain {
