--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 	// noinspection DependencyNotationArgument
 	api libs['third-party']
 	api 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+	api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	api "com.jayway.jsonpath:json-path"
 	// noinspection DependencyNotationArgument
 	compileOnly libs['orm']
