--- a/example/build.gradle
+++ b/example/build.gradle
@@ -14,7 +14,7 @@ jar {
 
 tasks.publish.enabled = false
 
-//tasks.withType(Test).configureEach { enabled = false }
+tasks.withType(Test).configureEach { enabled = false }
 
 tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
 
