fix: 修复 DefaultTypeConverter 中的枚举判断错误问题

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,87 +1,88 @@
-org.gradle.jvmargs = -Xmx4096m -XX:+HeapDumpOnOutOfMemoryError
+### JVM args for build
+org.gradle.jvmargs                      = -Xmx4096m -XX:+HeapDumpOnOutOfMemoryError
 
-###
-org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.caching=true
+### Gradle Config
+org.gradle.daemon                       = true
+org.gradle.parallel                     = true
+org.gradle.caching                      = true
 
-###
-SOURCE_COMPATIBILITY = 17
-TARGET_COMPATIBILITY = 17
+### Encoding
+systemProp.file.encoding                = UTF-8
 
-kotlin.version=1.6.21
+### Java Compile
+SOURCE_COMPATIBILITY                    = 17
+TARGET_COMPATIBILITY                    = 17
+
+kotlin.version                          = 1.6.21
 
 ### Plugin
-PLUGIN_SONARQUBE_VER = 2.7.1
-PLUGIN_JREBEL_VER = 1.1.12
+PLUGIN_SONARQUBE_VER                    = 2.7.1
+PLUGIN_JREBEL_VER                       = 1.1.12
 PLUGIN_SPRING_DEPENDENCY_MANAGEMENT_VER = 1.1.3
-PLUGIN_KT3K_COVERALLS_VER = 2.12.2
-PLUGIN_GIT_HOOK_VER = 1.2.1
-PLUGIN_COMMITLINT_VER = 1.4.3
-PLUGIN_SPOTLESS_VER = 6.21.0
-PLUGIN_ECLIPSE_APT_VER = 3.42.2
+PLUGIN_KT3K_COVERALLS_VER               = 2.12.2
+PLUGIN_GIT_HOOK_VER                     = 1.2.1
+PLUGIN_COMMITLINT_VER                   = 1.4.3
+PLUGIN_SPOTLESS_VER                     = 6.21.0
+PLUGIN_ECLIPSE_APT_VER                  = 3.42.2
 
 ### orm
-LIB_SPRING_MYBATIS_VER = 3.0.2
-LIB_MYSQL_CONNECTOR_VER = 8.0.31
+LIB_SPRING_MYBATIS_VER                  = 3.0.2
+LIB_MYSQL_CONNECTOR_VER                 = 8.0.31
 
 ### https://github.com/ttddyy/datasource-proxy
-LIB_DATASOURCE_PROXY_VER = 1.7
+LIB_DATASOURCE_PROXY_VER                = 1.7
 
 ### SpringBoot
-LIB_SPRING_BOOT_VER = 3.1.3
+LIB_SPRING_BOOT_VER                     = 3.1.3
 
 ### commons
-LIB_ASM_VER = 9.2
-LIB_GUAVA_VER = 32.1.2-jre
-LIB_APACHE_COMMONS_TEXT_VER = 1.9
-LIB_APACHE_COMMONS_NET_VER = 3.3
-LIB_COMMONS_BEANUTILS_VER = 1.9.4
-LIB_HANDLEBARS_VER = 4.1.2
-LIB_COMMONS_IO_VER = 2.11.0
-LIB_APACHE_COMMONS_EMAIL_VER = 1.3.2
-LIB_COMMONS_FILEUPLOAD_VER = 1.2.2
-LIB_APACHE_COMMONS_LANG3_VER = 3.7
-LIB_BITWALKER_USER_AGENT_PARSER_VER = 1.21
-LIB_NIMBUS_JOSE_JWT_VER = 9.10.1
-LIB_ASPECTJ_WEAVER_VER = 1.9.7
-LIB_HIBERNATE_VALIDATOR_VER = 8.0.1.Final
-LIB_JAKARTA_INTERCEPTOR_API_VER = 2.1.0
+LIB_ASM_VER                             = 9.2
+LIB_JAVASSIST_VER                       = 3.21.0-GA
+LIB_GUAVA_VER                           = 32.1.2-jre
+LIB_APACHE_COMMONS_TEXT_VER             = 1.9
+LIB_APACHE_COMMONS_NET_VER              = 3.3
+LIB_COMMONS_BEANUTILS_VER               = 1.9.4
+LIB_HANDLEBARS_VER                      = 4.1.2
+LIB_COMMONS_IO_VER                      = 2.11.0
+LIB_APACHE_COMMONS_EMAIL_VER            = 1.3.2
+LIB_COMMONS_FILEUPLOAD_VER              = 1.2.2
+LIB_APACHE_COMMONS_LANG3_VER            = 3.7
+LIB_BITWALKER_USER_AGENT_PARSER_VER     = 1.21
+LIB_NIMBUS_JOSE_JWT_VER                 = 9.10.1
+LIB_ASPECTJ_WEAVER_VER                  = 1.9.7
+LIB_HIBERNATE_VALIDATOR_VER             = 8.0.1.Final
+LIB_JAKARTA_INTERCEPTOR_API_VER         = 2.1.0
+LIB_CGLIB_VER                           = 3.3.0
+LIB_HTMLCLEANER_VER                     = 2.8
+LIB_BCPROV_VER                          = 1.46
+LIB_OGNL_VER                            = 3.1.2
+LIB_JPINYIN_VER                         = 1.1.8
+LIB_TIKA_VER                            = 2.3.0
+LIB_UNIREST_VER                         = 1.4.9
 
 
 # Elasticsearch
-LIB_ELASTICSEARCH_VER = 8.2.0
-LIB_JAKARTA_VAR = 2.1.0
+LIB_ELASTICSEARCH_VER                   = 8.2.0
+LIB_JAKARTA_VAR                         = 2.1.0
 
-### common
-LIB_CGLIB_VER = 3.3.0
-LIB_HTMLCLEANER_VER = 2.8
-LIB_BCPROV_VER = 1.46
-LIB_OGNL_VER = 3.1.2
-LIB_JPINYIN_VER = 1.1.8
-LIB_TIKA_VER = 2.3.0
-LIB_UNIREST_VER = 1.4.9
-
-### third party
-LIB_JAVASSIST_VER = 3.21.0-GA
 
 ###
-LIB_LOMBOK_VER = 1.18.28
-LIB_MAPSTRUCT_VER = 1.4.2.Final
-LIB_LOMBOK_MAPSTRUCT_BINDING_VER = 0.2.0
+LIB_LOMBOK_VER                          = 1.18.28
+LIB_MAPSTRUCT_VER                       = 1.4.2.Final
+LIB_LOMBOK_MAPSTRUCT_BINDING_VER        = 0.2.0
 
 ###
-LIB_HUTOOL_VER = 5.8.21
-LIB_SHARDING_SPHERE_VER = 4.1.1
+LIB_HUTOOL_VER                          = 5.8.21
+LIB_SHARDING_SPHERE_VER                 = 4.1.1
 
-### graphql
-LIB_GRAPHQL_SCALARS_VER = 18.1
-LIB_GRAPHQL_BOOT_VER = 15.0.0
-LIB_GRAPHQL_JAVA_VER = 21.0
-LIB_GRAPHQL_JAVA_TOOLS_VER = 13.0.3
+###  graphql
+LIB_GRAPHQL_SCALARS_VER                 = 18.1
+LIB_GRAPHQL_BOOT_VER                    = 15.0.0
+LIB_GRAPHQL_JAVA_VER                    = 21.0
+LIB_GRAPHQL_JAVA_TOOLS_VER              = 13.0.3
 
-##
-LIB_WEBMAGIC_VER = 0.8.0
+## webmagic
+LIB_WEBMAGIC_VER                        = 0.8.0
 
 ### test
-LIB_GROOVY_VER = 2.4.7
+LIB_GROOVY_VER                          = 2.4.7
