--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ allprojects {
     }
 
     repositories {
+        maven { url "https://maven.aliyun.com/repository/central"}
         mavenCentral()
         mavenLocal()
     }
