--- a/gradle/spotless.gradle
+++ b/gradle/spotless.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.diffplug.spotless"
 
 spotless {
+    ratchetFrom 'origin/master'
     format 'misc', {
         target '*.gradle', '*.md', '.gitignore'
         targetExclude '**/.gradle/', '**/build/'
