--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,7 @@ LIB_DATASOURCE_PROXY_VER                = 1.7
 LIB_SPRING_BOOT_VER                     = 3.1.3
 
 ### commons
-LIB_ASM_VER                             = 9.2
+LIB_ASM_VER                             = 9.3
 LIB_JAVASSIST_VER                       = 3.21.0-GA
 LIB_GUAVA_VER                           = 32.1.2-jre
 LIB_APACHE_COMMONS_TEXT_VER             = 1.9
@@ -61,7 +61,7 @@ LIB_TIKA_VER                            = 2.3.0
 LIB_UNIREST_VER                         = 1.4.9
 
 
-# Elasticsearch
+### Elasticsearch
 LIB_ELASTICSEARCH_VER                   = 8.2.0
 LIB_JAKARTA_VAR                         = 2.1.0
 
@@ -76,10 +76,10 @@ LIB_HUTOOL_VER                          = 5.8.21
 LIB_SHARDING_SPHERE_VER                 = 4.1.1
 
 ###  graphql
-LIB_GRAPHQL_SCALARS_VER                 = 18.1
-LIB_GRAPHQL_BOOT_VER                    = 15.0.0
-LIB_GRAPHQL_JAVA_VER                    = 21.0
-LIB_GRAPHQL_JAVA_TOOLS_VER              = 13.0.3
+LIB_GRAPHQL_SCALARS_VER                 = 21.0
+LIB_GRAPHQL_BOOT_VER                    = 15.1.0
+LIB_GRAPHQL_JAVA_VER                    = 21.3
+LIB_GRAPHQL_JAVA_TOOLS_VER              = 13.1.1
 
 ## webmagic
 LIB_WEBMAGIC_VER                        = 0.8.0
