--- a/example/src/main/resources/graphql-gateway.yaml
+++ b/example/src/main/resources/graphql-gateway.yaml
@@ -1,11 +1,5 @@
 schema:
   typeDefs: "./schema.graphql"
-  resolvers:
-    Query:
-      getUser: "./getUser.js"
-      getOrder: "./getOrder.js"
-    Mutation:
-      updateUser: "./updateUser.py"
 
 scalars:
   - name: "File"
@@ -16,87 +10,33 @@ scalars:
 services:
   - name: asany
     url: "https://api.asany.cn/graphql"
-#    typeDefs: "./user-service.graphql"
-    override:
-      - type: "Query"
-        fields:
-          - name: "applications"
-            rename: "apps"
-            dataLoader: true
-            dataFetcher: "batch"
-            arguments:
-              - name: "where"
-                rename: "filter"
-          - name: "testApp"
-            dataFetcher: "single"
-            type: "Application"
-            arguments:
-              - name: "input"
-                description: "test app input"
-                type: "EnhancedUserInput!"
-      - type: "Application"
-        fields:
-          - name: "name"
-            rename: "appName"
-          - name: "layoutRoute"
-            ignore: true
+    typeDefs: "./asany.graphql"
+    introspection:
+      enabled: false
+      frequency: 30m
+    excludeFields:
+      - "Application.routespaces"
+
+override:
+  - type: "Query"
+    fields:
+      - name: "apps"
+        mapping: "applications"
+        arguments:
+          - name: "filter"
+            mapping: "where"
+  - type: "Application"
+    fields:
+      - name: "appName"
+        mapping: "name"
+        dataFetcher: "appName"
+  - type: "Storage"
+    fields:
+      - name: "createdBy"
+        type: "User"
+        resolver:
+          query: "user@Query.user(id: $createdBy)"
 
 dataFetchers:
-  - name: "batch"
-    type: "spring"
-    bean: "batchDataFetcher"
-  - name: "single"
-    type: "javascript"
-    resolver: "./singleDataFetcher.js"
-
-rewriteFields:
-  - field: "User.addUser"
-    definition: "addUser(input: EnhancedUserInput): EnhancedUser"
-    delegate:
-      name: getUser
-      args:
-        id: "$.id"
-
-delegates:
-  - name: getUser
-    resolver: "./getUser.js"
-
-rewriteRules:
-  - match:
-      queryName: "getUser"
-    rewrite:
-      toService: "userService"
-      modifyQuery: "replaceUserIdWithUsername"
-
-  - match:
-      queryName: "getOrder"
-    rewrite:
-      toService: "orderService"
-      modifyQuery: "addOrderDetails"
-
-forwardingRules:
-  - match:
-      queryName: "getUser"
-    forwardTo: "userService"
-
-security:
-  authentication:
-    enabled: true
-    provider: jwt
-    secretKey: "your_secret_key"
-
-  authorization:
-    enabled: true
-    policy: "./auth-policy.yaml"
-
-logging:
-  level: INFO
-  format: json
-
-caching:
-  enabled: true
-  ttl: 300
-
-monitoring:
-  enabled: true
-  endpoint: "/metrics"
+  - name: "appName"
+    class: "cn.asany.example.demo.AppNameDataFetcher"
