feat: 网关添加 Directive

--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -78,7 +78,7 @@ graphql:
     cors:
       allowed-origin-patterns: "*"
       allowed-methods: GET, HEAD, POST
-      allowed-headers: Accept, Origin, Authorization, Content-Type, Last-Modified
+      allowed-headers: Accept, Origin, Authorization, Content-Type, Last-Modified, X-API-KEY
       allow-credentials: true
       max-age: 3600
   tools:
