--- a/core/src/main/resources/plugin.properties
+++ b/core/src/main/resources/plugin.properties
@@ -1,3 +1,3 @@
 # mybatis config
-mybatis.mapper-locations=classpath*:org/jfantasy/**/dao/*-Mapper.xml
+mybatis.mapper-locations=classpath*:net/asany/jfantasy/**/dao/*-Mapper.xml
 mybatis.type-aliases-package=net.asany.jfantasy.framework.dao.mybatis.keygen.bean
