--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -54,8 +54,7 @@ spring:
             instanceName: clusteredScheduler
             instanceId: AUTO
           jobStore:
-            dataSource: qzDS
-            class: org.quartz.impl.jdbcjobstore.JobStoreTX
+            class: org.springframework.scheduling.quartz.LocalDataSourceJobStore
             driverDelegateClass: org.quartz.impl.jdbcjobstore.StdJDBCDelegate
             tablePrefix: QRTZ_
             isClustered: false
