fix: 解决网关转发时处理 Upload 类型的数据

--- a/example/src/main/resources/graphql-gateway.yaml
+++ b/example/src/main/resources/graphql-gateway.yaml
@@ -7,19 +7,11 @@ scalars:
 
 services:
   - name: asany-server
-    url: "http://127.0.0.1:30881/graphql"
+    url: "https://api.asany.cn/graphql"
     typeDefs: "./asany-server.graphql"
     introspection:
       enabled: false
       frequency: 30m
-  - name: asany-legacy
-    url: "http://127.0.0.1:30882/graphql"
-    typeDefs: "./asany-legacy.graphql"
-    introspection:
-      enabled: false
-      frequency: 30m
-    excludeFields:
-      - "Application.routespaces"
 
 #override:
 #  - type: "Query"
