--- a/example/src/main/resources/application-dev.yml
+++ b/example/src/main/resources/application-dev.yml
@@ -34,6 +34,9 @@ spring:
 #            inline:
 #              sharding-column: tenant_id
 #              algorithmExpression: myDatabaseShardingAlgorithms
+  security:
+    access-token:
+      refresh: false
 
 
 cuckoo:
