--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 	api libs['commons']
 	// noinspection DependencyNotationArgument
 	api libs['third-party']
+	implementation 'org.bytedeco:javacv-platform:1.5.7'
+	implementation 'org.bytedeco:javacv:1.5.7'
 	api 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 	api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	api "com.jayway.jsonpath:json-path"
